--- a/app/src/main/res/layout/activity_advanced_search.xml
+++ b/app/src/main/res/layout/activity_advanced_search.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/root_settings"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -54,9 +53,7 @@
                 android:id="@+id/rec_advanced_search"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="20dp"
-                tools:layout_editor_absoluteX="1dp"
-                tools:layout_editor_absoluteY="1dp" />
+                android:layout_margin="20dp" />
 
             <TextView
                 android:layout_width="wrap_content"
