--- a/app/src/main/res/layout/activity_default_rec.xml
+++ b/app/src/main/res/layout/activity_default_rec.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/rec_default_root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -20,7 +19,5 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:layout_margin="20dp"
-        tools:layout_editor_absoluteX="1dp"
-        tools:layout_editor_absoluteY="1dp" />
+        android:layout_margin="20dp" />
 </RelativeLayout>
