--- a/app/src/main/res/layout/activity_edit_card_media.xml
+++ b/app/src/main/res/layout/activity_edit_card_media.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/root_edit_card_media"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -32,9 +31,7 @@
                 android:id="@+id/rec_card_media"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="20dp"
-                tools:layout_editor_absoluteX="1dp"
-                tools:layout_editor_absoluteY="1dp" />
+                android:layout_margin="20dp" />
         </LinearLayout>
     </ScrollView>
 </RelativeLayout>
