--- a/app/src/main/res/layout/rec_view_collection_or_pack.xml
+++ b/app/src/main/res/layout/rec_view_collection_or_pack.xml
@@ -1,68 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/rec_collections_preview_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_gravity="center"
+    android:layout_margin="12dp"
+    android:background="@drawable/rec_view_collection_or_pack_background"
+    android:orientation="horizontal"
     android:padding="12dp">
 
-    <LinearLayout
-        android:id="@+id/rec_collections_preview_layout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+    <com.vanniktech.emoji.EmojiTextView
+        android:id="@+id/rec_collections_preview_text"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:layout_gravity="center"
-        android:background="@drawable/rec_view_collection_or_pack_background"
-        android:orientation="horizontal"
+        android:gravity="center"
+        android:padding="12dp"
+        android:textColor="@android:color/black"
+        android:textSize="@dimen/rec_view_font_size_default" />
+
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:orientation="vertical"
         android:padding="12dp">
 
-        <com.vanniktech.emoji.EmojiTextView
-            android:id="@+id/rec_collections_preview_text"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_gravity="center"
-            android:gravity="center"
-            android:padding="12dp"
-            android:textColor="@android:color/black"
-            android:textSize="@dimen/rec_view_font_size_default" />
-
-        <LinearLayout
-            android:layout_width="0dp"
+        <TextView
+            android:id="@+id/rec_collections_parent"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:orientation="vertical"
-            android:padding="12dp">
-
-            <TextView
-                android:id="@+id/rec_collections_parent"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="2dp"
-                android:textColor="@color/light_black"
-                android:textSize="@dimen/rec_view_font_size_above_default"
-                android:visibility="gone" />
-
-            <TextView
-                android:id="@+id/rec_collections_name"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textColor="@android:color/black"
-                android:textSize="@dimen/rec_view_font_size_default" />
-
-            <TextView
-                android:id="@+id/rec_collections_desc"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="2dp"
-                android:textColor="@color/dark_grey"
-                android:textSize="@dimen/rec_view_font_size_below_default" />
-        </LinearLayout>
+            android:layout_marginTop="2dp"
+            android:textColor="@color/light_black"
+            android:textSize="@dimen/rec_view_font_size_above_default"
+            android:visibility="gone" />
 
         <TextView
-            android:id="@+id/rec_collections_number_text"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_gravity="end"
-            android:gravity="center_vertical|end"
-            android:padding="8dp"
+            android:id="@+id/rec_collections_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:textColor="@android:color/black"
             android:textSize="@dimen/rec_view_font_size_default" />
+
+        <TextView
+            android:id="@+id/rec_collections_desc"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="2dp"
+            android:textColor="@color/dark_grey"
+            android:textSize="@dimen/rec_view_font_size_below_default" />
     </LinearLayout>
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+    <TextView
+        android:id="@+id/rec_collections_number_text"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="end"
+        android:gravity="center_vertical|end"
+        android:padding="8dp"
+        android:textColor="@android:color/black"
+        android:textSize="@dimen/rec_view_font_size_default" />
+</LinearLayout>
