--- a/app/src/main/res/layout/activity_edit_card.xml
+++ b/app/src/main/res/layout/activity_edit_card.xml
@@ -21,7 +21,7 @@
                 android:layout_marginBottom="10dp"
                 android:gravity="center"
                 android:labelFor="@id/edit_card_front"
-                android:text="@string/new_card_front"
+                android:text="@string/card_front"
                 android:textColor="@color/light_black" />
 
             <EditText
@@ -30,7 +30,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="20dp"
                 android:ems="10"
-                android:hint="@string/new_card_front"
+                android:hint="@string/card_front"
                 android:inputType="text"
                 android:textColor="@color/light_black"
                 android:textColorHint="@color/light_black" />
@@ -41,7 +41,7 @@
                 android:layout_marginBottom="10dp"
                 android:gravity="center"
                 android:labelFor="@id/edit_card_back"
-                android:text="@string/new_card_back"
+                android:text="@string/card_back"
                 android:textColor="@color/light_black" />
 
             <EditText
@@ -50,7 +50,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="20dp"
                 android:ems="10"
-                android:hint="@string/new_card_back"
+                android:hint="@string/card_back"
                 android:inputType="text"
                 android:textColor="@color/light_black"
                 android:textColorHint="@color/light_black" />
@@ -61,7 +61,7 @@
                 android:layout_marginBottom="10dp"
                 android:gravity="center"
                 android:labelFor="@id/edit_card_notes"
-                android:text="@string/new_card_notes"
+                android:text="@string/card_notes"
                 android:textColor="@color/light_black" />
 
             <EditText
@@ -69,7 +69,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
-                android:hint="@string/new_card_notes"
+                android:hint="@string/card_notes"
                 android:inputType="textMultiLine"
                 android:textColor="@color/light_black"
                 android:textColorHint="@color/light_black" />
