--- a/app/src/main/res/layout/rec_view_collection_or_pack.xml
+++ b/app/src/main/res/layout/rec_view_collection_or_pack.xml
@@ -16,6 +16,7 @@
         android:layout_height="50dp"
         android:layout_gravity="center"
         android:gravity="center"
+        android:importantForAccessibility="no"
         android:padding="12dp"
         android:textColor="@android:color/black"
         android:textSize="@dimen/rec_view_font_size_default" />
