--- a/app/src/main/res/layout/activity_default_rec.xml
+++ b/app/src/main/res/layout/activity_default_rec.xml
@@ -11,6 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:alpha="0.25"
+        android:importantForAccessibility="no"
         android:scaleType="centerCrop"
         android:visibility="gone" />
 
