--- a/app/src/main/res/layout/dia_export.xml
+++ b/app/src/main/res/layout/dia_export.xml
@@ -27,7 +27,8 @@
                     android:id="@+id/dia_export_include_settings"
                     android:layout_width="20dp"
                     android:layout_height="20dp"
-                    android:buttonTint="@color/ijblue" />
+                    android:buttonTint="@color/ijblue"
+                    android:contentDescription="@string/import_export_include_settings" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -61,7 +62,8 @@
                         android:id="@+id/dia_export_include_media"
                         android:layout_width="20dp"
                         android:layout_height="20dp"
-                        android:buttonTint="@color/ijblue" />
+                        android:buttonTint="@color/ijblue"
+                        android:contentDescription="@string/import_export_include_media" />
 
                     <TextView
                         android:layout_width="wrap_content"
