--- a/app/src/main/res/layout/activity_edit_collection_or_pack.xml
+++ b/app/src/main/res/layout/activity_edit_collection_or_pack.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/root_edit_pack"
+    android:id="@+id/root_edit_collection_or_pack"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background"
@@ -8,52 +8,70 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_margin="20dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:gravity="center"
             android:orientation="vertical">
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
-                android:gravity="center"
-                android:labelFor="@id/edit_pack_name"
-                android:text="@string/collection_or_pack_name"
-                android:textColor="@color/light_black" />
-
-            <EditText
-                android:id="@+id/edit_pack_name"
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/edit_collection_or_pack_name_layout"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="20dp"
-                android:ems="10"
                 android:hint="@string/collection_or_pack_name"
-                android:inputType="text"
-                android:textColor="@color/light_black"
-                android:textColorHint="@color/light_black" />
+                android:textColorHint="@color/light_black">
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
-                android:gravity="center"
-                android:labelFor="@id/edit_pack_desc"
-                android:text="@string/collection_or_pack_desc"
-                android:textColor="@color/light_black" />
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/edit_collection_or_pack_name"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:ems="10"
+                    android:inputType="text"
+                    android:textColor="@color/light_black" />
+            </com.google.android.material.textfield.TextInputLayout>
 
-            <EditText
-                android:id="@+id/edit_pack_desc"
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/edit_collection_or_pack_desc_layout"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="20dp"
-                android:ems="10"
                 android:hint="@string/collection_or_pack_desc"
-                android:inputType="text"
-                android:textColor="@color/light_black"
-                android:textColorHint="@color/light_black" />
+                android:textColorHint="@color/light_black">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/edit_collection_or_pack_desc"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:ems="10"
+                    android:inputType="text"
+                    android:textColor="@color/light_black" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/edit_collection_or_pack_emoji_layout"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="20dp"
+                android:hint="@string/collection_or_pack_emoji"
+                android:textColorHint="@color/light_black">
+
+                <com.vanniktech.emoji.EmojiEditText
+                    android:id="@+id/edit_collection_or_pack_emoji"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="text"
+                    android:longClickable="false"
+                    android:textAlignment="center"
+                    android:textColor="@color/light_black"
+                    android:textColorHint="@color/light_black" />
+            </com.google.android.material.textfield.TextInputLayout>
 
             <TextView
                 android:layout_width="match_parent"
@@ -66,8 +84,7 @@
             <HorizontalScrollView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginBottom="20dp">
+                android:layout_gravity="center">
 
                 <LinearLayout
                     android:id="@+id/color_picker"
@@ -75,26 +92,6 @@
                     android:layout_height="wrap_content"
                     android:orientation="horizontal" />
             </HorizontalScrollView>
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
-                android:gravity="center"
-                android:labelFor="@id/edit_pack_emoji"
-                android:text="@string/collection_or_pack_emoji"
-                android:textColor="@color/light_black" />
-
-            <com.vanniktech.emoji.EmojiEditText
-                android:id="@+id/edit_pack_emoji"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="20dp"
-                android:hint="@string/collection_or_pack_emoji"
-                android:inputType="text"
-                android:longClickable="false"
-                android:textColor="@color/light_black"
-                android:textColorHint="@color/light_black" />
         </LinearLayout>
     </ScrollView>
 </RelativeLayout>
