text color black

--- a/app/src/main/res/layout/activity_new_collection_or_pack.xml
+++ b/app/src/main/res/layout/activity_new_collection_or_pack.xml
@@ -32,7 +32,7 @@
                     android:layout_height="wrap_content"
                     android:ems="10"
                     android:inputType="text"
-                    android:textColor="@color/light_black" />
+                    android:textColor="@android:color/black" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
@@ -50,7 +50,7 @@
                     android:layout_height="wrap_content"
                     android:ems="10"
                     android:inputType="text"
-                    android:textColor="@color/light_black" />
+                    android:textColor="@android:color/black" />
             </com.google.android.material.textfield.TextInputLayout>
         </LinearLayout>
     </ScrollView>
