add highlight color

--- a/app/src/main/res/layout/activity_edit_collection_or_pack.xml
+++ b/app/src/main/res/layout/activity_edit_collection_or_pack.xml
@@ -19,12 +19,13 @@
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/edit_collection_or_pack_name_layout"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                style="@style/material_edit_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="20dp"
                 android:hint="@string/collection_or_pack_name"
-                android:textColorHint="@color/light_black">
+                android:textColorHint="@color/light_black"
+                android:theme="@style/material_edit_text">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/edit_collection_or_pack_name"
@@ -37,12 +38,13 @@
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/edit_collection_or_pack_desc_layout"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                style="@style/material_edit_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="20dp"
                 android:hint="@string/collection_or_pack_desc"
-                android:textColorHint="@color/light_black">
+                android:textColorHint="@color/light_black"
+                android:theme="@style/material_edit_text">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/edit_collection_or_pack_desc"
@@ -55,12 +57,13 @@
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/edit_collection_or_pack_emoji_layout"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                style="@style/material_edit_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="20dp"
                 android:hint="@string/collection_or_pack_emoji"
-                android:textColorHint="@color/light_black">
+                android:textColorHint="@color/light_black"
+                android:theme="@style/material_edit_text">
 
                 <com.vanniktech.emoji.EmojiEditText
                     android:id="@+id/edit_collection_or_pack_emoji"
