--- a/app/src/main/res/values-v31/themes.xml
+++ b/app/src/main/res/values-v31/themes.xml
@@ -5,7 +5,7 @@
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/ijblue</item>
         <item name="colorPrimaryVariant">@color/ijblue</item>
-        <item name="colorSecondary">@color/warn_red</item>
+        <item name="colorSecondary">@color/highlight</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor">@color/ijblue</item>
