--- a/app/src/main/res/layout/dia_print.xml
+++ b/app/src/main/res/layout/dia_print.xml
@@ -3,11 +3,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background"
-    android:gravity="center">
+    android:gravity="center"
+    android:theme="@style/Theme.RBV">
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_margin="20dp">
 
         <RelativeLayout
             android:layout_width="match_parent"
