--- a/app/src/main/res/layout/dia_confirm.xml
+++ b/app/src/main/res/layout/dia_confirm.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background"
-    android:gravity="center">
+    android:gravity="center"
+    android:theme="@style/Theme.RBV">
 
     <TextView
         android:id="@+id/dia_confirm_desc"
