--- a/app/src/main/res/layout/dia_query.xml
+++ b/app/src/main/res/layout/dia_query.xml
@@ -6,11 +6,12 @@
     android:layout_height="match_parent"
     android:background="@color/background"
     android:gravity="center"
-    android:padding="10dp">
+    android:theme="@style/Theme.RBV">
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_margin="20dp">
 
         <LinearLayout
             android:layout_width="match_parent"
