--- a/app/src/main/res/values-v31/themes.xml
+++ b/app/src/main/res/values-v31/themes.xml
@@ -7,6 +7,7 @@
         <item name="colorPrimaryVariant">@color/ijblue</item>
         <item name="colorSecondary">@color/highlight</item>
         <item name="colorOnPrimary">@color/white</item>
+        <item name="android:textColorLink">@color/hyperlink</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor">@color/ijblue</item>
         <!-- Default background color. -->
